--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lumi-trade",
-  "version": "1.0.0",
+  "vesion": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.2.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "rollup-plugin-polyfill-node": "^0.13.0"
   }
 }
