--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "@orderly.network/react-app": "latest",
     "@orderly.network/trading": "latest",
+    "@orderly.network/wallet-connector": "latest",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
